CSS: fixes -update font-size to rem relative unit. -remove unnecessary width property from main element(it's a block element and it takes the full width of the page by default). -update height property to min-height property in order to fix component cut off on small screens.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,8 +25,7 @@ main{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .qr-card{
@@ -50,13 +49,13 @@ img{
 
 h1{
     font-weight: 700;
-    font-size: 20px;
+    font-size: 1.25rem;
     color: var(--Dark-blue);
 }
 
 p{
     font-weight: 400;
-    font-size: 15px;
+    font-size: 0.9375rem;
     color: var(--Grayish-blue);
 }
 
@@ -66,7 +65,7 @@ p{
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    font-size: 11px;
+    font-size: 0.6875rem;
 }
 
 .attribution a {
